fix(button-group): align items to allow for different sizes in same group

--- a/packages/button/src/button-group.pcss
+++ b/packages/button/src/button-group.pcss
@@ -1,6 +1,7 @@
 @import url("@sikt/sds-tokens/dist/css/custom-media.css");
 
 .sds-button-group {
+  align-items: center;
   display: flex;
   flex-wrap: wrap;
   gap: var(--sds-space-gap-small);
